syntax = "proto3";

option csharp_namespace = "GrpcService";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package countries;

service Countries {
  rpc GetCountriesAllMsSql (google.protobuf.Empty) returns (CountriesReply);
  rpc GetCountriesAllMongoDb (google.protobuf.Empty) returns (CountriesReply);
  rpc GetCountriesMsSql (PaginationRequest) returns (CountriesReply);
  rpc GetCountriesMongoDb (PaginationRequest) returns (CountriesReply);
}

// Параметры для пагинации
message PaginationRequest {
	int32 skip = 1;
	int32 take = 2; 
}

// Список моделей стран
message CountriesReply {
  repeated CountryReply countries = 1;
}

// Модель страны ISO
message CountryReply {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue full_name = 2;
  google.protobuf.StringValue in_english = 3;
  google.protobuf.StringValue alpha2 = 4;
  google.protobuf.StringValue alpha3 = 5;
  google.protobuf.DoubleValue iSO = 6;
  google.protobuf.StringValue part_of_world = 7;
  google.protobuf.StringValue location = 8;
}
